[package]
name = "wasm_liveview"
version = "0.1.0"
edition = "2024"
description = "Two-way bridge between wasm-bindgen Rust and a Phoenix LiveView: JS commands out, server-pushed events in."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package.metadata.docs.rs]
all-features = true
targets = ["wasm32-unknown-unknown"]
rustdoc-args = ["--cfg", "docsrs"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "EventTarget", "CustomEvent", "console"] }
